--- a/todo.txt
+++ b/todo.txt
@@ -20,5 +20,4 @@ gametypes
       fuse lasts longer the longer you hold down fire.
       range: from very close to you, up to enemy paddle.
 
-"high stakes" scoring: points scored is a factor of ball speed
-
+"high stakes" scoring: points scored is based on ball speed
