Fixed PlayerController to handle keys properly. Added better handling of controllers to make it easier to have 1 or 2 players.
git-svn-id: https://subversion.assembla.com/svn/mattstermiller@70 8d5a8edd-dd49-441e-b04f-95d012bb4ee3

--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,11 @@
 classes
-    Table
-        support for ball, paddle collision
-    Ball
     Controller
-        AI
         load bindings
     Configuration
     Menu
-        tree nodes
+        as tree nodes
 
+ball collision
 scaling screen size
 
 
